# sieve-language-server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: housekeeping.yaml  quality-assurance.yaml
src/: datastructures.rs  lib.rs  lsp.rs  main.rs  sieve.rs
tests/: document_operations.rs  require_passing.rs  sieve_definitions.rs  word_extraction.rs
