[package]
name = "sieve_language_server"
description = "Sieve Language Server Protocol implementation"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/libctf/sdk"
keywords = ["sieve", "lsp", "language-server"]
# categories = ["api-bindings", "config", "web-programming"]

[[bin]]
name = "sieve-lsp"
path = "src/main.rs"

[dependencies]
# Core LSP framework - provides all the LSP protocol handling
tower-lsp = "0.20"
# Async runtime for handling concurrent requests
tokio = { version = "1.0", features = ["full"] }
# JSON serialization for LSP message handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tree-sitter for syntax parsing (once your grammar is published)
tree-sitter = "0.20"
# tree-sitter-sieve = "0.1"  # Uncomment when your grammar is published
# Regex for pattern matching in diagnostics
regex = "1.0"
# Logging for debugging
tracing = "0.1"
tracing-subscriber = "0.3"
# URL handling for document URIs
url = "2.0"
# Rope data structure for efficient text editing
ropey = "1.6"
# Additional utilities
dashmap = "5.0"     # Thread-safe HashMap for caching
lazy_static = "1.4" # Static data initialization
